--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -128,7 +128,18 @@
             </div>
         </div>
     </div>
+    <div class="index-6">
+        <div class="index-1-content">
+            <div class="index-1-btn" id="index-1-btn">
+                <div class="index-1-top-title">Réalisations</div>
+                <div class="index-1-middle-title"><span>Nos</span> réalisations</div>
+            </div>
+   
+            
 
+            
+        </div>
+    </div>
     </main>
 
     <div class="bubble-question" id="bubble-question">
