--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -51,6 +51,67 @@
                 <div class="index-1-middle-title"><span>Notre</span> entreprise</div>
             </div>
    
+            <div class="index-2-items">
+            <div class="index-2-item" data-sr-id="3" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-folder-open" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">18944</div>
+                    <div class="index-2-item-bottom">Dossiers traités</div>
+                </div>
+            </div>
+
+            <div class="index-2-item" data-sr-id="4" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-users" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">14</div>
+                    <div class="index-2-item-bottom">Personnes</div>
+                </div>
+            </div>
+
+            <div class="index-2-item" data-sr-id="5" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-handshake" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">4339</div>
+                    <div class="index-2-item-bottom">Clients</div>
+                </div>
+            </div>
+
+            <div class="index-2-item" data-sr-id="6" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-birthday-cake" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">20</div>
+                    <div class="index-2-item-bottom">Années d’existence</div>
+                </div>
+            </div>
+
+            <div class="index-2-item" data-sr-id="7" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-warehouse" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">1000</div>
+                    <div class="index-2-item-bottom">M<sup>2</sup> d'atelier</div>
+                </div>
+            </div>
+
+            <div class="index-2-item" data-sr-id="8" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 2s cubic-bezier(0.5, 0, 0, 1) 0s;">
+                <div class="index-2-item-icon">
+                    <i class="fas fa-coffee" aria-hidden=""></i>
+                </div>
+                <div class="index-2-item-text">
+                    <div class="index-2-item-top" style="visibility: visible;">837</div>
+                    <div class="index-2-item-bottom">Cafés ce mois-ci</div>
+                </div>
+            </div>
+        </div>
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
