--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -132,18 +132,67 @@
             </div>
         </div>
     </div>
-    <div class="index-6">
-        <div class="index-1-content">
-            <div class="index-1-btn" id="index-1-btn">
-                <div class="index-1-top-title">Réalisations</div>
-                <div class="index-1-middle-title"><span>Nos</span> réalisations</div>
-            </div>
-   
-            
+    <div class="galerie galerie-module-exemple">
+<div class="galerie-title galerie-title-module-exemple">Exemples de réalisations</div>
+<div class="galerie-content">
+    <div class="galerie-content-items">
+                                    <a href="/asset/tmp/exemple/realisationcolisnoir-544.jpg" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="/asset/tmp/exemple/600x600/realisationcolisnoir-544.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                <span class="galerie-content-item-background">
+                    <span class="galerie-content-item-text">
+                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
+                                                        <span class="galerie-content-item-text-description">Site e-commerce pour le site de Colisnoir</span>
+                                                </span>
+                </span>
+                <span class="galerie-content-item-border"></span>
+            </a>
+                                        <a href="/asset/tmp/exemple/realisationlouloub-278.jpg" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="/asset/tmp/exemple/300x300/realisationlouloub-278.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                <span class="galerie-content-item-background">
+                    <span class="galerie-content-item-text">
+                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
+                                                        <span class="galerie-content-item-text-description">Site e-commerce pour le site de Loulou B</span>
+                                                </span>
+                </span>
+                <span class="galerie-content-item-border"></span>
+            </a>
+                                        <a href="/asset/tmp/exemple/site-e-commerce-254-645.jpg" class="galerie-content-item galerie-content-item-3 image-popup" title="réalisation d'un site e-commerce ben's beauty bugs">
+                <img src="/asset/tmp/exemple/300x300/site-e-commerce-254-645.jpg" alt="réalisation d'un site e-commerce ben's beauty bugs" class="galerie-content-item-img">
+                <span class="galerie-content-item-background">
+                    <span class="galerie-content-item-text">
+                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
+                                                        <span class="galerie-content-item-text-description">réalisation d'un site e-commerce ben's beauty bugs</span>
+                                                </span>
+                </span>
+                <span class="galerie-content-item-border"></span>
+            </a>
+                                        <a href="/asset/tmp/exemple/site-e-commerce-854-653.jpg" class="galerie-content-item galerie-content-item-4 image-popup" title="site de vente en ligne rc drone modelisme">
+                <img src="/asset/tmp/exemple/300x300/site-e-commerce-854-653.jpg" alt="site de vente en ligne rc drone modelisme" class="galerie-content-item-img">
+                <span class="galerie-content-item-background">
+                    <span class="galerie-content-item-text">
+                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
+                                                        <span class="galerie-content-item-text-description">site de vente en ligne rc drone modelisme</span>
+                                                </span>
+                </span>
+                <span class="galerie-content-item-border"></span>
+            </a>
+                                        <a href="/asset/tmp/exemple/site-e-commerce-895-611.jpg" class="galerie-content-item galerie-content-item-5 image-popup" title="site de vente Crealisse">
+                <img src="/asset/tmp/exemple/600x600/site-e-commerce-895-611.jpg" alt="site de vente Crealisse" class="galerie-content-item-img">
+                <span class="galerie-content-item-background">
+                    <span class="galerie-content-item-text">
+                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
+                                                        <span class="galerie-content-item-text-description">site de vente Créalisse</span>
+                                                </span>
+                </span>
+                <span class="galerie-content-item-border"></span>
+            </a>
+                                </div>
+</div>
 
-            
-        </div>
-    </div>
+<div class="module-exemples">
+    <a href="/galerie/site-internet.php" class="module-exemples-link">EN VOIR PLUS</a>
+</div>
+</div>
     </main>
 
     <div class="bubble-question" id="bubble-question">
