--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -133,7 +133,7 @@
         </div>
     </div>
     <div class="galerie galerie-module-exemple">
-<div class="galerie-title galerie-title-module-exemple">Exemples de réalisations</div>
+<div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
 <div class="galerie-content">
     <div class="galerie-content-items">
                                     <a href="/asset/tmp/exemple/realisationcolisnoir-544.jpg" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
