--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -136,8 +136,8 @@
 <div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
 <div class="galerie-content">
     <div class="galerie-content-items">
-                                    <a href="/asset/tmp/exemple/realisationcolisnoir-544.jpg" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="/asset/tmp/exemple/600x600/realisationcolisnoir-544.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                                    <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="{{asset('site1.jpg')}}" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
