--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -137,7 +137,7 @@
 <div class="galerie-content">
     <div class="galerie-content-items">
                                     <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="{{asset('site1.jpg')}}" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                <img src="https://fullpagescreencapture.com/screen/1af0e58755a528aba44f9387da11c26f.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
