--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -135,7 +135,7 @@
     <div class="galerie galerie-module-exemple">
 <div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
 <div class="galerie-content">
-    <div class="galerie-content-items">
+    <div class="galerie-content-items" style="height:500px ;"> 
                                     <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
                 <img src="https://fullpagescreencapture.com/screen/1af0e58755a528aba44f9387da11c26f.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
