--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -141,7 +141,7 @@
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
-                                                        <span class="galerie-content-item-text-description">Site e-commerce pour le site de Colisnoir</span>
+                                                        <span class="galerie-content-item-text-description">Site e-commerce pour NDWI</span>
                                                 </span>
                 </span>
                 <span class="galerie-content-item-border"></span>
