--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -446,6 +446,7 @@
 				<div class="footer-col">
 
 					<div class="footer-col-title">
+				<div class="footer-col-icon"><i class="fas fa-home" aria-hidden=""></i></div>
 						<span>Notre</span>
 						société</div>
 					<a href="societe-2.html" class="footer-col-link">Qui sommes-nous ?</a><br>
