--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -461,7 +461,7 @@
 					<a href="nous-contacter/mentions-legales.html" class="footer-col-link">Mentions légales</a>
 				</div>
 				<div class="footer-col">
-
+			<div class="footer-col-icon"><i class="fas fa-thumbs-up" aria-hidden=""></i></div>
 					<div class="footer-col-title">
 						<span>Nos</span>
 						services</div>
@@ -476,7 +476,7 @@
 
 				</div>
 				<div class="footer-col">
-
+			<div class="footer-col-icon"><i class="fas fa-shopping-cart" aria-hidden=""></i></div>
 					<div class="footer-col-title">
 						<span>Nos</span>
 						produits</div>
@@ -508,7 +508,7 @@
 
 				</div>
 				<div class="footer-col">
-
+			<div class="footer-col-icon"><i class="fas fa-comments" aria-hidden=""></i></div>
 					<div class="footer-col-title">
 						<span>Nous</span>
 						contacter</div>
