--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -146,8 +146,8 @@
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
-                                        <a href="/asset/tmp/exemple/realisationlouloub-278.jpg" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="/asset/tmp/exemple/300x300/realisationlouloub-278.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                                        <a href="{{asset('site2.jpg')}}" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="{{asset('site2.jpg')}}" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
