--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -136,8 +136,9 @@
 <div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
 <div class="galerie-content">
     <div class="galerie-content-items" style="height:500px ;"> 
-                                    <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="https://fullpagescreencapture.com/screen/1af0e58755a528aba44f9387da11c26f.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                                    <a href="{{asset('site2.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="https://fullpagescreencapture.com/screen/cdba0bac676774b25abb64588d2ef7e7.jpg
+                " alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
@@ -146,8 +147,8 @@
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
-                                        <a href="{{asset('site2.jpg')}}" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="https://fullpagescreencapture.com/screen/cdba0bac676774b25abb64588d2ef7e7.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                                        <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="https://fullpagescreencapture.com/screen/1af0e58755a528aba44f9387da11c26f.jpg" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
