--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -157,8 +157,8 @@
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
-                                        <a href="{{asset('site3.jpg')}}" class="galerie-content-item galerie-content-item-3 image-popup" title="réalisation d'un site e-commerce ben's beauty bugs">
-                <img src="{{asset('site3.jpg')}}" alt="réalisation d'un site e-commerce ben's beauty bugs" class="galerie-content-item-img">
+                                        <a href="{{asset('site3.png')}}" class="galerie-content-item galerie-content-item-3 image-popup" title="réalisation d'un site e-commerce ben's beauty bugs">
+                <img src="{{asset('site3.png')}}" alt="réalisation d'un site e-commerce ben's beauty bugs" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
