--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -167,8 +167,8 @@
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
-                                        <a href="/asset/tmp/exemple/site-e-commerce-854-653.jpg" class="galerie-content-item galerie-content-item-4 image-popup" title="site de vente en ligne rc drone modelisme">
-                <img src="/asset/tmp/exemple/300x300/site-e-commerce-854-653.jpg" alt="site de vente en ligne rc drone modelisme" class="galerie-content-item-img">
+                                        <a href="{{asset('site4.png')}}" class="galerie-content-item galerie-content-item-4 image-popup" title="site de vente en ligne rc drone modelisme">
+                <img src="{{asset('site4.png')}}" alt="site de vente en ligne rc drone modelisme" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
