--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -82,7 +82,7 @@
                     <div class="index-3-item-active-content">
                         <h2 class="index-3-item-title">{{ categorie.nom }}</h2>
                         <h3 class="index-3-item-subtitle">{{ categorie.titre }}</h3>
-                        <h4 class="index-3-item-text">{{ categorie.text }}</h4>
+                        <h4 class="index-3-item-text">{{ categorie.texte }}</h4>
                         <div class="index-3-item-plus">En savoir +</div>
                     </div>
                 </div>
