--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -190,6 +190,10 @@
     background: hsl(152deg 54% 34% / 90%) !important;
 }
 
+ .mfp-img{
+	max-height:100% !important;
+ }
+
 		</style>
 	</body>
 </html></head><div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v5.0&appId=2426167164288678&autoLogAppEvents=1"></script><body>
