--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -135,13 +135,13 @@
 <div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
 <div class="galerie-content">
     <div class="galerie-content-items" style="height:500px ;"> 
-                                    <a href="{{asset('site2.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="https://fullpagescreencapture.com/screen/cdba0bac676774b25abb64588d2ef7e7.jpg
+                                    <a href="{{asset('site4.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
+                <img src="{{asset('site4.png')}}
                 " alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
-                        <span class="galerie-content-item-text-categorie">Site e-commerce</span>
-                                                        <span class="galerie-content-item-text-description">Site e-commerce pour NDWI</span>
+                        <span class="galerie-content-item-text-categorie">Site catalogue</span>
+                                                        <span class="galerie-content-item-text-description">Site catalogue pour Mobilier Express</span>
                                                 </span>
                 </span>
                 <span class="galerie-content-item-border"></span>
@@ -166,12 +166,12 @@
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
-                                        <a href="{{asset('site4.png')}}" class="galerie-content-item galerie-content-item-4 image-popup" title="site de vente en ligne rc drone modelisme">
-                <img src="{{asset('site4.png')}}" alt="site de vente en ligne rc drone modelisme" class="galerie-content-item-img">
+                                        <a href="https://fullpagescreencapture.com/screen/cdba0bac676774b25abb64588d2ef7e7.jpg" class="galerie-content-item galerie-content-item-4 image-popup" title="site de vente en ligne rc drone modelisme">
+                <img src="https://fullpagescreencapture.com/screen/cdba0bac676774b25abb64588d2ef7e7.jpg" alt="site de vente en ligne rc drone modelisme" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site e-commerce</span>
-                                                        <span class="galerie-content-item-text-description">site de vente en ligne rc drone modelisme</span>
+                                                        <span class="galerie-content-item-text-description">Dite de vente en ligne pour sanaa so chic</span>
                                                 </span>
                 </span>
                 <span class="galerie-content-item-border"></span>
