--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -136,8 +136,7 @@
 <div class="galerie-content">
     <div class="galerie-content-items" style="height:500px ;"> 
                                     <a href="{{asset('site4.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
-                <img src="{{asset('site4.png')}}
-                " alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
+                <img src="{{asset('site4.png')}}" alt="exemple de réalisation pour les site e-commerce" class="galerie-content-item-img">
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site catalogue</span>
