--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -140,8 +140,8 @@
                 <span class="galerie-content-item-background">
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site catalogue</span>
-                                                        <span class="galerie-content-item-text-description">Site E-commerce pour sanaa so chic <a href="https://dev.sanaasochic.fr" target="_blank">https://dev.sanaasochic.fr</a></span>
-                                                        
+                                                        <span class="galerie-content-item-text-description">Site E-commerce pour sanaa so chic <a href="https://dev.sanaasochic.fr" target="_blank">https://dev.sanaasochic.fr</a>
+                                             
                                                 </span>
                 </span>
                 <span class="galerie-content-item-border"></span>
