--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -141,7 +141,7 @@
                     <span class="galerie-content-item-text">
                         <span class="galerie-content-item-text-categorie">Site catalogue</span>
                                                         <span class="galerie-content-item-text-description">Site E-commerce pour sanaa so chic
-                                                             <a href="https://dev.sanaasochic.fr" target="_blank">https://dev.sanaasochic.fr</a>
+                                                         aaaaa
                                              
                                                 </span>
                 </span>
