--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -144,7 +144,7 @@
                                                             
                                              
                                                 </span>
-                                                <span  href="https://dev.sanaasochic.fr" target="_blank">VOIR LE SITE</span>
+                                                <span style="color:white;"  href="https://dev.sanaasochic.fr" target="_blank">VOIR LE SITE</span>
                 </span>
                 <span class="galerie-content-item-border"></span>
             </a>
