--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -146,7 +146,7 @@
                                                 </span>
                                                
                 </span>
-                 <span class="galerie-content-item-text-description" style="color:white;"  href="https://dev.sanaasochic.fr" target="_blank">VOIR LE SITE</span>
+                 <a class="galerie-content-item-text-description" style="color:white;"  href="https://dev.sanaasochic.fr" target="_blank">VOIR LE SITE</a>
                 <span class="galerie-content-item-border"></span>
             </a>
                                         <a href="{{asset('site1.jpg')}}" class="galerie-content-item galerie-content-item-2 image-popup" title="exemple de réalisation pour les site e-commerce">
