--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,32 +17,14 @@
 		<meta name="msapplication-navbutton-color" content="#000">
 		<meta name="apple-mobile-web-app-status-bar-style" content="#000">
 		<link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
-
+    <!-- Revolution Slider -->
+	   <link rel="stylesheet" type="text/css" href="{{asset('plugins/rs-plugin/fonts/font-awesome/css/font-awesome.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{asset('plugins/rs-plugin/css/settings.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{asset('plugins/rs-plugin/css/layers.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{asset('plugins/rs-plugin/css/navigation.css')}}">
 		<script type="application/ld+json">
 			{
-																																																																																																																																																												    "@context": "https://schema.org",
-																																																																																																																																																												    "@type": "Organization",
-																																																																																																																																																												    "name": "CREATIV",
-																																																																																																																																																												    "logo": "https://www.creativdz.com/asset/img/logo.png",
-																																																																																																																																																												    "url": "https://www.creativdz.com",
-																																																																																																																																																												    "alternateName": "Développement web et communication digitale Algérie"
-																																																																																																																																																												,"description": "Confiez la création de votre site web, application, charte graphique, à CREATIV et profitez d'une étude gratuite",
-																																																																																																																																																												
-																																																																																																																																																												    "address": {
-																																																																																																																																																												        "@type": "PostalAddress",
-																																																																																																																																																												        "streetAddress": "12 rue Bel hocine rachid Oran",
-																																																																																																																																																												        "postalCode": "31000",
-																																																																																																																																																												        "addressLocality": "Oran",
-																																																																																																																																																												        "addressRegion": "Algérie"
-																																																																																																																																																												    },
-																																																																																																																																																												    "contactPoint": [
-																																																																																																																																																												        {
-																																																																																																																																																												            "@type": "ContactPoint",
-																																																																																																																																																												            "contactType": "Customer service",
-																																																																																																																																																												            "telephone": "+213 553 04 82 76",
-																																																																																																																																																												            "availableLanguage": "French",
-																																																																																																																																																												            "email": "contact@creativdz.com"
-																																																																																																																																																												        }
+																																																																																																																																																												    "@context": "https://schema.org",																																																																																																																																																								        }
 																																																																																																																																																												    ]
 																																																																																																																																																												}
 		</script>
