--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -225,4 +225,20 @@
         </div>
     </div>
 
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
+      <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/jquery.themepunch.tools.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/jquery.themepunch.revolution.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.video.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.slideanims.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.actions.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.layeranimation.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.kenburn.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.navigation.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.migration.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.parallax.min.js')}}"></script>
+  <script type="text/javascript" src="{{asset('plugins/rs-plugin/js/extensions/revolution.extension.carousel.min.js')}}"></script>
+
+
 {% endblock %}
