--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,36 +11,51 @@
   
 <div class="header-overflow" id="header-overflow"></div>
 <main>
-    <div class="module-slide">
-    <div id="slider1_container" style="position: relative; margin: 0px auto; top: 0px; left: 0px; width: 1349px; height: 505.875px; overflow: hidden;">
+      <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" data-alias="classicslider1" style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
+              <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
+              <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
+                  <ul>
+                     {% for banniere in banners %}
+                      <!-- SLIDE -->
+                      <li data-index="rs-1" data-transition="zoomin" data-slotamount="7" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-rotate="0" data-saveperformance="off" data-title="Le 29 Mars 2022 à Paris" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="{{ asset('Bannieres/'~banniere.path) }}" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                        <!-- LAYERS -->
 
-        <div style="position: absolute; top: 0px; left: 0px; width: 1600px; height: 600px; transform-origin: 0px 0px; transform: scale(0.843125);">
-            <div class="" style="position: relative; margin: 0px auto; top: 0px; left: 0px; width: 1600px; height: 600px; overflow: visible;">
+                          <!-- LAYER NR. 1 -->
+                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-152']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">Le 29 Mars 2022 à Paris
+                          </div>
+
+
+                        <!-- LAYER NR. 2 -->
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-44-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-40','-40','-40','-42']" data-fontsize="['80','80','80','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">Conférence IFDE
+                        </div>
+                        <!-- LAYER NR. 3 -->
+                        <div class="tp-caption Gym-Subline tp-resizeme" id="slide-44-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','1']" data-fontsize="['20','20','20','8']" data-lineheight="['30','30','30','20']" data-fontweight="['100','100','100','400']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 8; white-space: nowrap; font-family: Arial;  font-weight: 200;">En Partenariat avec Sigmaformations
+                        </div>
+
+                        <!-- LAYER NR. 3 -->
+                        <div class="tp-caption Gym-Subline tp-resizeme" id="slide-44-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['71','71','71','51']" data-fontsize="['30','30','30','15']" data-lineheight="['30','30','30','20']" data-fontweight="['100','100','100','400']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 8; white-space: nowrap; font-family: Arial;  font-weight: 200;">A L'ÈRE DE LA CRYPTOMONNAIE
+                        </div>
+  
             
-                <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1600px; height: 600px; overflow: hidden; z-index: 0;">
-                    
-                       
-                {% for banniere in banners %}
 
-             <div style="width: 1600px; height: 600px; top: 0px; left: 0; position: absolute; overflow: hidden; transform: perspective(2000px);"><img u="image" src="{{ asset('Bannieres/'~banniere.path) }}" alt="pack web présence" border="0" style="width: 1600px; height: 600px; top: 0px; left: 0px; transform: perspective(2000px); position: absolute;">
-                
-                    </div>
-       
-            {% endfor %}
-           
-            
-
-          
-                </div>
-             
-            </div>
-        </div><span u="arrowleft" class="jssora21l" style="width: 55px; height: 55px; top: 225.438px; left: 8px; display: none;"></span><span u="arrowright" class="jssora21r" style="width: 55px; height: 55px; top: 225.438px; right: 8px; display: none;"></span>
-        <div
-            u="navigator" class="jssorb17" style="position: absolute; bottom: 16px; right: 6px; width: 121px; height: 16px; left: 614px;">
-
-            <div u="prototype" style="position: absolute; width: 16px; height: 16px; left: 0px; top: 0px;" class="av"></div>
+                        <!-- LAYER NR. 4 -->
+                        <a href="https://sigmaformations.fr/produit/reservation/" target="_blank"><div class="tp-caption  rev-btn " id="slide-44-layer-6" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['bottom','bottom','bottom','bottom']" data-voffset="['120','60','20','20']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power2.easeOut;"  data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;" data-start="1500" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-45","delay":""}]' data-basealign="slide" data-responsive_offset="off" data-responsive="off" style="z-index: 10; white-space: nowrap; background-color: #ffbd59; padding: 10px 10px 10px 10px; line-height: 30px; color: #223557; font-weight: bold;">JE PARTICIPE &nbsp;&nbsp;<i class="fa-icon-arrow-circle-right" style="font-weight: bold;"></i>
+                        </div></a>
+                    </li>
+                    {% endfor %}
+                 
+        
       
-    </div>
+                  </ul>
+                  <div class="tp-static-layers"></div>
+                  <div class="tp-bannertimer" style="height: 7px; background-color: rgba(255, 255, 255, 0.25);"></div>
+              </div>
+          
+          
+            </div>
+ 
 </div>
 
 
