--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -55,7 +55,36 @@
           
           
             </div>
- 
+    <div class="module-slide">
+    <div id="slider1_container" style="position: relative; margin: 0px auto; top: 0px; left: 0px; width: 1349px; height: 505.875px; overflow: hidden;">
+
+        <div style="position: absolute; top: 0px; left: 0px; width: 1600px; height: 600px; transform-origin: 0px 0px; transform: scale(0.843125);">
+            <div class="" style="position: relative; margin: 0px auto; top: 0px; left: 0px; width: 1600px; height: 600px; overflow: visible;">
+            
+                <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1600px; height: 600px; overflow: hidden; z-index: 0;">
+                    
+                       
+                {% for banniere in banners %}
+
+             <div style="width: 1600px; height: 600px; top: 0px; left: 0; position: absolute; overflow: hidden; transform: perspective(2000px);"><img u="image" src="{{ asset('Bannieres/'~banniere.path) }}" alt="pack web présence" border="0" style="width: 1600px; height: 600px; top: 0px; left: 0px; transform: perspective(2000px); position: absolute;">
+                
+                    </div>
+       
+            {% endfor %}
+           
+            
+
+          
+                </div>
+             
+            </div>
+        </div><span u="arrowleft" class="jssora21l" style="width: 55px; height: 55px; top: 225.438px; left: 8px; display: none;"></span><span u="arrowright" class="jssora21r" style="width: 55px; height: 55px; top: 225.438px; right: 8px; display: none;"></span>
+        <div
+            u="navigator" class="jssorb17" style="position: absolute; bottom: 16px; right: 6px; width: 121px; height: 16px; left: 614px;">
+
+            <div u="prototype" style="position: absolute; width: 16px; height: 16px; left: 0px; top: 0px;" class="av"></div>
+      
+    </div>
 </div>
 
 
