--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -19,7 +19,7 @@
                       <!-- SLIDE -->
                       <li data-index="rs-1" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="{{ asset('Bannieres/'~banniere.path) }}" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                        <img src="{{ asset('Bannieres/'~banniere.path) }}" alt="" data-bgposition="center center" data-kenburns="on" data-duration="10000" data-scalestart="100" data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                         <!-- LAYERS -->
         <!-- 
                       
@@ -282,7 +282,7 @@
                           drag_block_vertical: false
                       },
                       arrows: {
-                          style: "zeus",
+                          style: "",
                           enable: true,
                           hide_onmobile: true,
                           hide_under: 600,
