--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -282,7 +282,7 @@
                           drag_block_vertical: false
                       },
                       arrows: {
-                          style: "",
+                          style: "zeus",
                           enable: true,
                           hide_onmobile: true,
                           hide_under: 600,
